css/flexbox-fundamentals-exercise.css
    * {box-sizing: border-box;}

body {
    margin: 0;
    padding: 0;
    background: lightskyblue;
    font-family: Chalkboard, sans-serif;
}

h1 {text-align: center;}

h2, h3 {
    padding: 0;
    margin: 0;
}

.container {
    margin: 0 auto;
    width: 80%;
}

.green-box {
    background: green;
    height: 1em;
    width: 2em;
}

.border {border: 2px solid black;}

.card {
    width: 400px;
    height: 800px;
    background: white;
    padding: 1em;
    margin: 0 auto;
    /* enter needed declarations here */
    display: flex;
    flex-direction: column;
    justify-content: space-around;

}

section {
    /* enter needed declarations here */
    display: flex;

}

section:nth-of-type(1) {
    height: 3em;
    background: lightgreen;
    /* enter needed declarations here */
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
section:nth-of-type(1) div:last-child {
    /* enter needed declarations here */
    align-self: flex-start;
}

.purple-box {
    background: fuchsia;
    width: 3em;
    height: 1em;
}

.purple-box:nth-of-type(1) {
    /* enter needed declarations here */
    flex-grow: 2;
}

.purple-box:nth-of-type(2) {
    /* enter needed declarations here */
    flex-grow: 1;
}

.blue-box {
    width: 100%;
    background: blue;
    height: 10em;
}

section:nth-of-type(3) {
    /* enter needed declarations here */
    align-content: flex-start;
}

section:nth-of-type(3) h3 {
    /* enter needed declarations here */
    flex-grow: 1;
    align-self: center;

}

.orange-circle {
    background: orange;
    width: 2em;
    height: 2em;
    border-radius: 1em;
    margin: .5em;
}

.large-brown-box {
    height: 5em;
    width: 5em;
    background: brown;
    /* enter needed declarations here */
    flex-grow: 1;

}

.large-brown-box:nth-of-type(2) {
    margin: 0 1em;
}

section:nth-of-type(5) {
    /* enter needed declarations here */
    justify-content: space-evenly;
    align-items: center;
}

.yellow-box {
    background: yellow;
    width: 2em;
    height: 2em;
}

section:nth-of-type(6) {
    background: coral;
    height: 14em;
    /* enter needed declarations here */
    flex-wrap: wrap;
    justify-content: space-between;
    /*align-content: space-around;*/
    align-items: center;


}

.grey-box {
    background: grey;
    width: 3em;
    height: 3em;
}

.grey-box:nth-of-type(odd) {
    height: 4em;
}

